# mixitup-translator

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
mixitup_translator/: pronouns.py  utils.py
