[tool.poetry]
name = "mixitup-pronoun-translator"
version = "0.0.1"
description = "Convert api.pronouns.alejo.io a cached endpoint for use w/ mixitup web request"
authors = ["Latent Logic <lat.logic@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
