[tool.poetry]
name = "mixitup-translator"
version = "0.1.1"
description = "MixItUp API translator, read external APIs and translate into computed fields for use in commands"
authors = ["Latent Logic <lat.logic@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["mixitup", "api", "pronouns", "alejo"]
repository = "https://github.com/Latent-Logic/mixitup-translator"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
aiohttp = "^3.9.5"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
